# fb-ipmi-oem

./: .clang-format  CMakeLists.txt  CMakeLists.txt.in  LICENSE  MAINTAINERS  OWNERS  cmake-format.json  cri_sensors.json  generate-whitelist.sh  gpio_desc.json  groups  ipmi-whitelist.conf  meson.build  meson.options  meson_config.h.in  meson_options.txt  project.config
configs/bletchley/: cri_sensors.json  gpio_desc.json  post_desc.json
configs/catalina/: gpio_desc.json
configs/fby35/: cri_sensors.json  gpio_desc.json  post_desc.json
configs/greatlakes/: cri_sensors.json  gpio_desc.json  post_desc.json
configs/harma/: cri_sensors.json  gpio_desc.json
configs/minerva/: cri_sensors.json  gpio_desc.json
configs/santabarbara/: gpio_desc.json
configs/tiogapass/: cri_sensors.json  gpio_desc.json
configs/ventura/: gpio_desc.json
configs/yosemite4/: cri_sensors.json
configs/yosemitev2/: cri_sensors.json  dimm_type.json  gpio_desc.json  post_desc.json
fby35/: gpio_desc.json
include/: appcommands.hpp  biccommands.hpp  commandutils.hpp  groupextcommands.hpp  ipmi-whitelist.hpp  oemcommands.hpp  sdrutils.hpp  sensorutils.hpp  storagecommands.hpp  types.hpp  usb-dbg.hpp
src/: appcommands.cpp  biccommands.cpp  commandutils.cpp  groupextcommands.cpp  oemcommands.cpp  selcommands.cpp  storagecommands.cpp  tags  transportcommands.cpp  usb-dbg.cpp  utils.cpp  whitelist-filter.cpp
tiogapass/: cri_sensors.json
yosemitev2/: .cri_sensors.json.swp  cri_sensors.json  dimm_type.json  gpio_desc.json
