option('tests', type: 'feature', description: 'Build tests')
option('bic', type: 'feature', description: 'Enable bic handlers')
option(
    'post-code-bytes',
    type: 'integer',
    description: 'Post code byte size.',
    value: 1,
)
option(
    'debug-card-frame-size',
    type: 'integer',
    description: 'debug card frame size.',
    value: 2,
)
option('host-instances', type: 'string', description: 'Host Instances')
option('machine', type: 'string', description: 'Machine')
option('host-fw-types',
  type: 'string',
  value: 'Sentinel_Dome_bic;Wailua_Falls_bic;Sentinel_Dome_bios;Sentinel_Dome_cpld',
  description: 'List of firmware types, separated by semicolon'
)