option('tests', type: 'feature', description: 'Build tests')
option('bic', type: 'feature', description: 'Enable bic handlers')
option(
  'host-instances',
  type: 'string',
  description: 'Host Instances')
option(
  'machine',
  type: 'string',
  description: 'Machine')
option(
  'me_support',
  type : 'boolean',
  value : true,
  description: 'Enable ME support')
option(
  'baseboard_name',
  type: 'string',
  description: 'Baseboard name')
